Fix missing whitespace issue with multi-line messages

--- a/src/feed/css/Message.css
+++ b/src/feed/css/Message.css
@@ -26,4 +26,5 @@
 .body {
   margin-top: 5px;
   font-size: 14px;
+  white-space: pre-wrap;
 }
